--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amro's Pet Store</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- ✅ jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <style>
     html {
       scroll-behavior: smooth;
@@ -14,7 +18,6 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
       background-color: #f5f5f5;
     }
 
@@ -55,16 +58,19 @@
       transform: scale(1.03);
     }
 
-    .pet-list {
-      display: none;
-      flex-wrap: wrap;
+    .filter-section {
+      display: flex;
       gap: 1rem;
-      margin-top: 1rem;
+      flex-wrap: wrap;
       justify-content: center;
+      margin-bottom: 1.5rem;
     }
 
-    .show {
+    .pet-list {
       display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
     }
 
     .pet-card {
@@ -112,7 +118,6 @@
       background-color: #f4f4f4;
     }
 
-    /* Contact section styles */
     #contact {
       background-color: #e0f7e0;
       padding: 2rem;
@@ -130,11 +135,6 @@
     .contact-info {
       flex: 1;
       min-width: 250px;
-    }
-
-    .contact-info h3 {
-      margin-bottom: 0.5rem;
-      color: #4CAF50;
     }
 
     .contact-map {
@@ -156,7 +156,7 @@
     <h1>Amro's Pet Store</h1>
     <nav>
       <a href="#home">Home</a>
-      <a href="#pets" onclick="togglePets(event)">Pets</a>
+      <a href="#pets">Pets</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -174,9 +174,19 @@
     <!-- Pets Section -->
     <section id="pets">
       <h2>Our Pets</h2>
+
+      <!-- ✅ Filter Checkboxes -->
+      <div class="filter-section">
+        <label><input type="checkbox" name="pet-type" value="Dog" checked> Dogs</label>
+        <label><input type="checkbox" name="pet-type" value="Cat" checked> Cats</label>
+        <label><input type="checkbox" name="pet-type" value="Capybara" checked> Capybaras</label>
+        <label><input type="checkbox" name="pet-type" value="Bird" checked> Birds</label>
+      </div>
+
+      <!-- ✅ Pet Cards -->
       <div class="pet-list" id="petList">
         <!-- Dogs -->
-        <div class="pet-card">
+        <div class="pet-card" data-type="Dog">
           <img src="img/petshop-img/dogs/dog01.jpg" alt="Benny the dog">
           <div class="pet-info">
             <p><strong>Benny</strong></p>
@@ -186,7 +196,7 @@
           <button onclick="adoptPet('Benny')">Adopt Me</button>
         </div>
 
-        <div class="pet-card">
+        <div class="pet-card" data-type="Dog">
           <img src="img/petshop-img/dogs/dog02.jpg" alt="Rocky the dog">
           <div class="pet-info">
             <p><strong>Rocky</strong></p>
@@ -196,18 +206,8 @@
           <button onclick="adoptPet('Rocky')">Adopt Me</button>
         </div>
 
-        <div class="pet-card">
-          <img src="img/petshop-img/dogs/dog03.jpg" alt="Leo the dog">
-          <div class="pet-info">
-            <p><strong>Leo</strong></p>
-            <p>Type: Dog</p>
-            <p>Age: 1 year</p>
-          </div>
-          <button onclick="adoptPet('Leo')">Adopt Me</button>
-        </div>
-
         <!-- Cats -->
-        <div class="pet-card">
+        <div class="pet-card" data-type="Cat">
           <img src="img/petshop-img/cats/cat01.jpg" alt="Whiskers the cat">
           <div class="pet-info">
             <p><strong>Whiskers</strong></p>
@@ -217,28 +217,8 @@
           <button onclick="adoptPet('Whiskers')">Adopt Me</button>
         </div>
 
-        <div class="pet-card">
-          <img src="img/petshop-img/cats/cat02.jpg" alt="Mochi the cat">
-          <div class="pet-info">
-            <p><strong>Mochi</strong></p>
-            <p>Type: Cat</p>
-            <p>Age: 2 years</p>
-          </div>
-          <button onclick="adoptPet('Mochi')">Adopt Me</button>
-        </div>
-
-        <div class="pet-card">
-          <img src="img/petshop-img/cats/cat03.jpg" alt="Shadow the cat">
-          <div class="pet-info">
-            <p><strong>Shadow</strong></p>
-            <p>Type: Cat</p>
-            <p>Age: 5 years</p>
-          </div>
-          <button onclick="adoptPet('Shadow')">Adopt Me</button>
-        </div>
-
         <!-- Capybaras -->
-        <div class="pet-card">
+        <div class="pet-card" data-type="Capybara">
           <img src="img/petshop-img/capybaras/capybara01.jpg" alt="Churro the capybara">
           <div class="pet-info">
             <p><strong>Churro</strong></p>
@@ -248,18 +228,8 @@
           <button onclick="adoptPet('Churro')">Adopt Me</button>
         </div>
 
-        <div class="pet-card">
-          <img src="img/petshop-img/capybaras/capybara02.jpg" alt="Waffles the capybara">
-          <div class="pet-info">
-            <p><strong>Waffles</strong></p>
-            <p>Type: Capybara</p>
-            <p>Age: 2 years</p>
-          </div>
-          <button onclick="adoptPet('Waffles')">Adopt Me</button>
-        </div>
-
         <!-- Birds -->
-        <div class="pet-card">
+        <div class="pet-card" data-type="Bird">
           <img src="img/petshop-img/dogs/birds/bird01.jpg" alt="Sunny the bird">
           <div class="pet-info">
             <p><strong>Sunny</strong></p>
@@ -268,60 +238,67 @@
           </div>
           <button onclick="adoptPet('Sunny')">Adopt Me</button>
         </div>
-
-        <div class="pet-card">
-          <img src="img/petshop-img/dogs/birds/bird02.jpg" alt="Coco the bird">
-          <div class="pet-info">
-            <p><strong>Coco</strong></p>
-            <p>Type: Bird</p>
-            <p>Age: 2 years</p>
-          </div>
-          <button onclick="adoptPet('Coco')">Adopt Me</button>
-        </div>
       </div>
     </section>
 
-   
     <!-- Contact Section -->
-<section id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-container">
-      <div class="contact-info">
-        <h3>Our Address</h3>
-        <p>Amro's Pet Store</p>
-        <p>123 abac Street</p>
-        <p>Bangkok, Suvarnabhumi</p>
-        <p>Thailand</p>
-        <p>Email: <a href="mailto:amro@petstore.com">amro@petstore.com</a></p>
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <div class="contact-container">
+        <div class="contact-info">
+          <h3>Our Address</h3>
+          <p>Amro's Pet Store</p>
+          <p>123 abac Street</p>
+          <p>Bangkok, Suvarnabhumi</p>
+          <p>Thailand</p>
+          <p>Email: <a href="mailto:amro@petstore.com">amro@petstore.com</a></p>
+        </div>
+        <div class="contact-map">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.054839014971!2d100.8353416!3d13.6116127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d430e775155f9%3A0xf01923824353260!2sAssumption%20University%20Suvarnabhumi%20Campus!5e0!3m2!1sen!2sth!4v1718160385403!5m2!1sen!2sth" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
       </div>
-      <div class="contact-map">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.054839014971!2d100.8353416!3d13.6116127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d430e775155f9%3A0xf01923824353260!2sAssumption%20University%20Suvarnabhumi%20Campus!5e0!3m2!1sen!2sth!4v1718160385403!5m2!1sen!2sth" 
-          allowfullscreen="" 
-          loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
-    </div>
-  </section>
-  
+    </section>
   </main>
 
   <footer>
     <p>Contact us at <a href="mailto:amro@petstore.com">amro@petstore.com</a></p>
   </footer>
 
+  <!-- ✅ jQuery Filter Script -->
   <script>
-    function togglePets(event) {
-      event.preventDefault();
-      const list = document.getElementById('petList');
-      list.classList.toggle('show');
-      document.getElementById('pets').scrollIntoView({ behavior: 'smooth' });
-    }
+    $(document).ready(function () {
+      function filterPets() {
+        const selectedTypes = $("input[name='pet-type']:checked").map(function () {
+          return $(this).val();
+        }).get();
 
-    function adoptPet(petName) {
-      alert(`Thank you for choosing to adopt ${petName}! We'll contact you soon.`);
-    }
+        $(".pet-card").each(function () {
+          const type = $(this).data("type");
+          if (selectedTypes.includes(type)) {
+            $(this).show();
+          } else {
+            $(this).hide();
+          }
+        });
+      }
+
+      // Filter on checkbox change
+      $("input[name='pet-type']").on("change", filterPets);
+
+      // Initial load
+      filterPets();
+
+      // Adopt button
+      window.adoptPet = function (name) {
+        alert("Thank you for adopting " + name + "! We’ll contact you soon.");
+      };
+    });
   </script>
+
 </body>
 </html>
